#src/scss/_2_header.scss
.header {
	width: 100%;
	position: fixed;
	top: 20px;
	z-index: 7;
	// background-color: tomato;
	transition: all $hoverTime ease;

	@include xl {
	}

	@include lg {
	}

	@include md {
	}

	@include sm {
	}

	&::before {
		content: "";
		position: absolute;
		z-index: 0;
		background-color: $white-400;
		top: 30px;
		left: 50px;
		right: 50px;
		border-radius: 30px;
		box-shadow: 0 0 40px 40px $white-400;
		transition: all $hoverTime ease;

		@include xl {
		}

		@include lg {
		}

		@include md {
			display: none;
			// z-index: 9;
		}

		@include sm {
		}
	}

	// .header__content

	&__content {
		display: flex;
		justify-content: space-between;
		align-items: center;

		@include xl {
		}

		@include lg {
		}

		@include md {
		}

		@include sm {
		}
	}

	// .header__logo

	&__logo {
		position: relative;
		z-index: 9;
		max-width: 64px;

		@include xl {
		}

		@include lg {
		}

		@include md {
		}

		@include sm {
		}
	}

	// .header__menu

	// &__menu {
	// }

	&._scroll {
		padding: 5px 0;
		&::before {
			top: 15px;
			left: 10px;
			right: 10px;
			min-height: 35px;
			background-color: $white;
			box-shadow: 0 0 20px 20px $white;
			opacity: 1;
		}
	}
}

.menu {
	width: 100%;
	display: flex;
	align-items: center;

	@include md {
		justify-content: flex-end;
	}

	// &__icon {
	// }

	// .menu__body

	&__body {
		position: relative;
		z-index: 1;
		// max-width: 100%;
		width: 100%;
		// flex: 1 1 100%;
		display: flex;
		align-items: center;
		justify-content: space-between;
		transition: all $hoverTime ease;

		@include xl {
			// justify-content: start;
		}

		@include lg {
			justify-content: space-evenly;
		}

		@include md {
			position: fixed;
			top: 0;
			left: 0;
			width: 100%;
			height: 100%;
			z-index: 8;
			overflow: auto;
			transform: translate(-100%, 0);
			flex-direction: column;
			align-items: start;
			background-color: $teal-970;
			padding: 140px 20px 30px;
		}

		@include sm {
		}

		&._active {
			transform: translate(0, 0);
		}
	}

	// .menu__list

	&__list {
		display: flex;
		justify-content: space-between;
		align-items: center;
		padding: 0 10px 0 30px;

		@include xl {
			padding: 0 10px 0 15px;
		}

		@include lg {
		}

		@include md {
			flex-direction: column;
			align-items: start;
			padding: 0;
			margin: 0 0 50px;
		}

		@include sm {
		}
	}

	// .menu__item

	&__item {
		position: relative;

		&:not(:last-child) {
			margin: 0 30px 0 0;
		}

		@include md {
			font-weight: 700;
			font-size: 32px;
			&:not(:last-child) {
				margin: 0 0 30px 0;
			}
		}
	}

	// .menu__link

	&__link {
		color: $black-200;
		text-decoration: transparent;
		transition: all $hoverTime ease;

		@include md-min {
			&:hover {
				color: $teal-400;
				text-decoration: underline;
			}

			&:active {
			}

			&:focus {
			}
		}
	}

	// .menu__callback

	&__callback {
		display: flex;
		flex-wrap: wrap;
		text-decoration: transparent;
		color: $black-200;
		background-color: transparent;
		align-items: center;
		padding: 0 0 0 20px;
		transition: all $hoverTime ease;

		@include md-min {
			&:hover {
				color: $teal-400;
				text-decoration: underline;

				& ._icon-phone {
					&::before {
						color: $teal-400;
					}
				}
			}

			&:hover .menu__recvest {
				opacity: 1;
				visibility: visible;
				pointer-events: all;
			}

			&:active {
			}

			&:focus {
			}
		}

		@include xl {
			// display: block;
			// padding: 0 0 0 35px;
			& + p {
				// justify-content: flex-start;
				// align-self: start;
				// display: none;
			}
		}

		@include lg {
			position: relative;

			&:hover {
				text-decoration: none;
			}
		}

		@include md {
			flex-direction: column;
			text-align: left;
			align-items: start;
			font-size: 28px;
			font-weight: 500;
			padding: 0;
			margin: 0 0 50px;

			& p {
				display: block;
			}
		}

		@include sm {
		}
	}

	&__recvest {
		transition: all $hoverTime ease;
		@include xl {
			text-align: start;
		}

		@include lg {
			position: absolute;
			width: 350%;
			right: 0;
			left: -50%;
			top: 100%;
			padding: 15px 5px 5px;
			opacity: 0;
			visibility: hidden;
			pointer-events: none;
		}

		@include md {
			display: block;
		}
	}

	&__back {
		transition: all $hoverTime ease;
		@include xl {
			display: block;
		}
		@include lg {
			display: inline-block;
		}
	}

	// .menu__arrow
	&__arrow {
		display: block;
		color: $black-200;
		transition: all $hoverTime ease;

		@include xl {
		}

		@include lg {
			position: relative;
			padding: 0 30px 0 0;
			cursor: pointer;
			transition: all $hoverTime ease;

			&:hover {
				color: $teal-400;
				&::after {
					border-top-color: $teal-400;
				}
			}

			&:hover > .menu__phones {
				opacity: 1;
				visibility: visible;
				pointer-events: all;
			}

			&:active {
			}

			&:focus {
			}

			&::after {
				content: "";
				position: absolute;
				top: 50%;
				right: 0;
				width: 0;
				height: 0;
				transform: translate(0, -50%);
				border-left: 10px solid transparent;
				border-right: 10px solid transparent;
				border-top: 15px solid $black-200;
				transition: all $hoverTime ease;

				@include md {
					display: none;
				}
			}
		}

		@include md {
			display: block;
		}
	}

	// .menu__tel

	&__tel {
		display: none;

		@include lg {
			display: block;
		}

		@include md {
			display: none;
		}
	}

	// .menu__phones

	&__phones {
		display: block;

		// align-items: flex-end;
		// transform: translate(-5px, 0);
		transition: all $hoverTime ease;

		@include xl {
			flex-grow: 1;
			// flex-shrink: 1;
			// align-self: end;
			text-align: end;
		}

		@include lg {
			// display: none;
			position: absolute;
			// max-width: 200px;
			width: 250%;
			right: 0;
			left: -150%;
			top: 100%;
			padding: 15px 5px 5px;
			opacity: 0;
			visibility: hidden;
			pointer-events: none;
		}

		@include md {
			position: relative;
			width: 100%;
			left: 0;
			top: 0;
			padding: 0;
			font-size: 28px;
			opacity: 1;
			visibility: visible;
			pointer-events: all;
		}

		@include sm {
		}
	}

	// .menu__phone

	&__phone {
		display: block;
		// width: 100%;
		transition: all $hoverTime ease;
		&:not(:last-child) {
			margin: 0 0 5px;
		}

		@include xl {
		}

		@include lg {
			// display: none;
		}

		@include md {
			// display: block;
			&:not(:last-child) {
				margin: 0 0 25px;
			}
		}

		@include sm {
		}
	}

	// .menu__number

	&__number {
		display: block;
		font-weight: 700;
		color: $black-200;
		transition: all $hoverTime ease;

		@include md-min {
			&:hover {
				color: $teal-400;
			}

			&:active {
			}

			&:focus {
			}
		}
	}
}

//Burger
.icon-menu {
	display: none;
	@media (max-width: $md3+px) {
		display: block;
		position: relative;
		// top: 20px;
		// right: 10px;
		// right: 0;
		width: 30px;
		height: 18px;
		cursor: pointer;
		z-index: 9;
		span {
			transition: all 0.3s ease 0s;
			top: calc(50% - 1px);
			left: 0px;
			position: absolute;
			width: 100%;
			height: 2px;
			background-color: #000;
			&:first-child {
				top: 0px;
			}
			&:last-child {
				top: auto;
				bottom: 0px;
			}
		}
		&._active {
			span {
				transform: scale(0);
				&:first-child {
					transform: rotate(-45deg);
					top: calc(50% - 1px);
				}
				&:last-child {
					transform: rotate(45deg);
					bottom: calc(50% - 1px);
				}
			}
		}
	}
}

._icon-phone {
	display: inline-block;
	color: $black-200;
	margin-right: 8px;
	text-decoration: none;
	transition: all $hoverTime ease;

	@include xl {
		margin-right: 15px;
		font-weight: 700;
	}

	@include md {
		color: $black-200;
	}

	@include md-min {
		&:hover {
		}

		&:active {
		}

		&:focus {
		}
	}
}

